master-overlay-secondary z-index setting to resolve failing tests

--- a/app/assets/stylesheets/modules/master_overlay.css.scss
+++ b/app/assets/stylesheets/modules/master_overlay.css.scss
@@ -104,7 +104,7 @@
   /* JS: Temporary, ugly fix to prevent overlap */
   top: 80px;
   overflow: hidden;
-  z-index: 100;
+  z-index: 140;
   position: absolute;
   height: 100%;
   transition-property: right, left;
